[package]
name = "led-wall"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

#rpi-led-matrix = { version = "0.4.0", default-features = true, features = ["stdcpp-static-link"] }
#rpi-led-matrix = { path = "../rust-rpi-rgb-led-matrix/rpi-led-matrix", default-features = true, features = ["stdcpp-static-link"]}
rpi-led-matrix = { path = "../rust-rpi-rgb-led-matrix/rpi-led-matrix" }
