[package]
name = "led-wall"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
anyhow = "1.0.94"

rpi-led-matrix = { path = "../rust-rpi-rgb-led-matrix/rpi-led-matrix" }

embedded-graphics = "0.8"
embedded-canvas = { version = "0.3.1", features = ["alloc"] }
tinybmp = "0.6.0"

rand = "0.8.5"